login name and background color change

--- a/src/Scoreboard.css
+++ b/src/Scoreboard.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #f4f4f9;
+  background: linear-gradient(45deg, #ffbb33, #ff5e62); /* Orange to Red Gradient */
+  color: white;
+  font-family: 'Arial', sans-serif;
 }
 
 .scoreboard-container {
@@ -107,7 +108,9 @@ input:disabled {
   justify-content: center;
 }
 
-
+.usernamecenter {
+  padding-left: 15px;
+}
 /*animation*/
 
 
