--- a/src/Scoreboard.css
+++ b/src/Scoreboard.css
@@ -28,6 +28,7 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   /* Slightly transparent white background */
   border-radius: 15px;
+  overflow-x: auto; 
 }
 
 header {
@@ -204,9 +205,9 @@ input:disabled {
   }
 }
 
-.layout {
+/* .layout {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
+} */ 
