table center change

--- a/src/Scoreboard.css
+++ b/src/Scoreboard.css
@@ -160,6 +160,17 @@ input:disabled {
   margin-right: 12px;
 }
 
+
+
+
+.tablelayout {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0 auto;
+}
 .user {
   color: green;
 }
