--- a/src/Scoreboard.css
+++ b/src/Scoreboard.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-  background-image: url('https://1.bp.blogspot.com/-17SJHaaWs04/XdfPcPzL0II/AAAAAAAACYQ/P1-WgF6UBX4EE5g_1YAFeufzNdDrr5xZgCLcBGAsYHQ/w1200-h630-p-k-no-nu/El%2BBig%2BPicture%2Bdel%2BDeporte%2BThe%2BMost%2BPopular%2BSports%2Bin%2Bthe%2BWorld.jpg');
+  background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/1672c161484101.5a704e766346f.jpg');
   background-size: cover;
   /* Ensures the image covers the entire screen */
   background-position: center;
