--- a/src/Scoreboard.css
+++ b/src/Scoreboard.css
@@ -28,7 +28,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh; /* Ensure the container takes up the full viewport height */
+  height: 80vh;
+  /* Ensure the container takes up the full viewport height */
   padding: 20px;
 }
 
@@ -38,8 +39,10 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 400px; /* Set max width for the login form */
-  text-align: center; /* Center the text inside the form */
+  max-width: 400px;
+  /* Set max width for the login form */
+  text-align: center;
+  /* Center the text inside the form */
 }
 
 .loginheader {
@@ -57,6 +60,7 @@ body {
 .logoutuser {
   cursor: pointer;
 }
+
 header {
   text-align: center;
   margin-bottom: 30px;
@@ -101,6 +105,11 @@ h1 {
   height: 80vh;
   overflow: auto;
 }
+
+.teamBold {
+  font-weight: 900;
+}
+
 /* The scoreboard container styling remains the same */
 .scoreboard-container {
   width: 500px;
@@ -212,7 +221,7 @@ input:disabled {
 
 
 .centerpart {
-background-color: green;
+  background-color: green;
 }
 
 
