--- a/src/Scoreboard.css
+++ b/src/Scoreboard.css
@@ -152,10 +152,10 @@ h1 {
   text-align: center;
   font-size: 16px;
 }
-
+/* 
 .scoreboard-table tr:hover {
   background-color: #ddd;
-}
+} */
 
 /* Team colors */
 .red {
